Started implementation of Microsoft Authentification System

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -42,10 +42,8 @@
         <%- include('overlay') %>
             <div id="loadingContainer">
                 <div id="loadingContent">
-                    <div id="loadSpinnerContainer">
-                        <img id="loadCenterImage" src="assets/images/ValariumBanner.png">
-                        <span>Loading...</span>
-                    </div>
+                    <img id="loadCenterImage" src="assets/images/ValariumBanner.png">
+                    <p id="loadCenterText">Loading...</p>
                 </div>
             </div>
             <script>
