--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -32,7 +32,7 @@
                     <div class="mediaDivider"></div>
                     <div id="externalMedia">
                         <div class="mediaContainer">
-                            <a href="https://github.com/dscalzi/HeliosLauncher" class="mediaURL" id="linkURL">
+                            <a href="https://github.com/Valarium/Launcher" class="mediaURL" id="linkURL">
                                 <svg id="linkSVG" class="mediaSVG" viewBox="35.34 34.3575 70.68 68.71500">
                                     <g>
                                         <path
