--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,12 +5,13 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/ValariumIcon.png" />
-        <span id="welcomeHeader">WELCOME TO WESTEROSCRAFT</span>
-        <span id="welcomeDescription">Our mission is to recreate the universe imagined by author George RR Martin in his
-            fantasy series, A Song of Ice and Fire. Through the collaborative effort of thousands of community members,
-            we have sought to create Westeros as accurately and precisely as possible within Minecraft. The world we are
-            creating is yours to explore. Journey from Dorne to Castle Black, and if you aren’t afraid, beyond the Wall
-            itself, but best not delay. As the words of House Stark ominously warn: Winter is Coming.</span>
+        <span id="welcomeHeader">WELCOME TO VALARIUM</span>
+        <span id="welcomeDescription">Bienvenue à toi humble joueur, tu t'apprêtes à entrer dans un serveur du nom de
+            Valarium. Je te laisse le soin de découvrir par toi-même toutes les petites spécificités de ce pvp-faction
+            créé de toutes pièces par les membres du staff. Si tu as la moindre question ou un problème à résoudre, une
+            équipe de modération est là pour y remédier in game comme sur notre Discord. Tu peux aussi trouver plein
+            d'infos utiles ainsi qu'un forum sur notre site internet. Le staff de Valarium te souhaite un agréable
+            moment en jeu. À tout de suite !</span>
         <br>
         <span id="welcomeDescCTA">You are just a few clicks away from Westeros.</span>
         <button id="welcomeButton">
