--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -272,12 +272,8 @@ body, button {
 */
 
 #welcomeImageSeal {
-    border-radius: 50%;
-    border: 2px solid #cad7e1;
-    background: rgba(1, 2, 1, 0.5);
     height: 125px;
     width: 125px;
-    box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
     margin-bottom: 5%;
     margin-top: 10%;
 }
@@ -368,6 +364,16 @@ body, button {
  *                                                                             *
  ******************************************************************************/
 
+ #loginButtonMicrosoft {
+     color:rgb(255, 255, 255);
+     background-color: transparent;
+     border-color: rgb(255,255,255);
+     border-radius: 6px;
+     margin-bottom: 25px;
+     font-size: 12px;
+     letter-spacing: 1px;
+     font-weight: bold;
+ }
 /* Styles for dimmer login span. */
 .loginSpanDim {
     font-size: 12px;
@@ -485,12 +491,8 @@ body, button {
 
 /* Logo on login form. */
 #loginImageSeal {
-    border-radius: 50%;
-    border: 2px solid #cad7e1;
-    background: rgba(1, 2, 1, 0.5);
     height: 125px;
-    width: 125px;
-    box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
+    width: 250px;
     margin-bottom: 20px;
 }
 
@@ -2675,7 +2677,6 @@ input:checked + .toggleSwitchSlider:before {
     position: relative;
     height: 70px;
     width: 70px;
-    border-radius: 50%;
     margin-top: 50px;
 }
 
@@ -3716,6 +3717,12 @@ input:checked + .toggleSwitchSlider:before {
  *                                                                             *
  ******************************************************************************/
 
+#loadCenterText {
+    margin-top: 50px;
+    font-size: xx-large;
+    font-weight: bold;
+}
+
 /* Loading container, placed above everything. */
 #loadingContainer {
     position: absolute;
@@ -3736,17 +3743,8 @@ input:checked + .toggleSwitchSlider:before {
     justify-content: center;
 }
 
-/* Spinner container. */
-#loadSpinnerContainer {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 /* Stationary image for the spinner. */
 #loadCenterImage {
-    position: absolute;
     width: 480px;
     height: auto;
 }
