--- a/app/login.ejs
+++ b/app/login.ejs
@@ -7,7 +7,8 @@
     </div>
     <div id="loginContent">
         <form id="loginForm">
-            <img id="loginImageSeal" src="assets/images/ValariumIcon.png" />
+            <img id="loginImageSeal" src="assets/images/ValariumBanner.png" />
+            <button id="loginButtonMicrosoft">SE CONNECTER AVEC MICROSOFT</button>
             <span id="loginSubheader">MINECRAFT LOGIN</span>
             <div class="loginFieldContainer">
                 <svg id="profileSVG" class="loginSVG" viewBox="40 37 65.36 61.43">
@@ -66,7 +67,7 @@
                     <a href="https://minecraft.net/en-us/store/minecraft/">Need an Account?</a>
                 </span>
                 <p class="loginDisclaimerText">Your password is sent directly to mojang and never stored.</p>
-                <p class="loginDisclaimerText">Helios Launcher is not affiliated with Mojang AB.</p>
+                <p class="loginDisclaimerText">Valarium is not affiliated with Mojang AB.</p>
             </div>
         </form>
     </div>
