Added Microsoft support

--- a/app/login.ejs
+++ b/app/login.ejs
@@ -8,7 +8,7 @@
     <div id="loginContent">
         <form id="loginForm">
             <img id="loginImageSeal" src="assets/images/ValariumBanner.png" />
-            <button id="loginButtonMicrosoft">SE CONNECTER AVEC MICROSOFT</button>
+            <button id="loginButtonMicrosoft" type="button">SE CONNECTER AVEC MICROSOFT</button>
             <span id="loginSubheader">MINECRAFT LOGIN</span>
             <div class="loginFieldContainer">
                 <svg id="profileSVG" class="loginSVG" viewBox="40 37 65.36 61.43">
