Added Alpha Mode

--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -32,7 +32,7 @@
                     <div class="mediaDivider"></div>
                     <div id="externalMedia">
                         <div class="mediaContainer">
-                            <a href="https://github.com/Valarium/Launcher" class="mediaURL" id="linkURL">
+                            <a href="https://valarium.fr" class="mediaURL" id="linkURL">
                                 <svg id="linkSVG" class="mediaSVG" viewBox="35.34 34.3575 70.68 68.71500">
                                     <g>
                                         <path
@@ -88,7 +88,7 @@
                             </a>
                         </div>
                         <div class="mediaContainer">
-                            <a href="https://discord.gg/zNWUXdt" class="mediaURL" id="discordURL">
+                            <a href="https://discord.gg/PckhxXVSpc" class="mediaURL" id="discordURL">
                                 <svg id="discordSVG" class="mediaSVG" viewBox="35.34 34.3575 70.68 68.71500">
                                     <g>
                                         <path
