--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -404,6 +404,10 @@
                 </div>
             </div>
         </div>
+        <div id="settingsAlphaModeEnabled" class="settingsTab" style="display: none;">
+            <h1>Mode Alpha Actif</h1>
+            <h2>Vous ne pouvez pas accèder à cet onglet</h2>
+        </div>
     </div>
     <script src="./assets/js/scripts/settings.js"></script>
 </div>
