--- a/app/app.ejs
+++ b/app/app.ejs
@@ -43,7 +43,7 @@
             <div id="loadingContainer">
                 <div id="loadingContent">
                     <img id="loadCenterImage" src="assets/images/ValariumBanner.png">
-                    <p id="loadCenterText">Loading...</p>
+                    <p id="loadCenterText">Chargement...</p>
                 </div>
             </div>
             <script>
