--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,7 +5,7 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/ValariumIcon.png" />
-        <span id="welcomeHeader">WELCOME TO VALARIUM</span>
+        <span id="welcomeHeader">BIENVENUE SUR VALARIUM</span>
         <span id="welcomeDescription">Bienvenue à toi humble joueur, tu t'apprêtes à entrer dans un serveur du nom de
             Valarium. Je te laisse le soin de découvrir par toi-même toutes les petites spécificités de ce pvp-faction
             créé de toutes pièces par les membres du staff. Si tu as la moindre question ou un problème à résoudre, une
