--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -3,7 +3,7 @@
         <div id="left">
             <div id="image_seal_container">
                 <img id="image_seal" src="assets/images/ValariumIcon.png" />
-                <div id="updateAvailableTooltip">Update Available</div>
+                <div id="updateAvailableTooltip">Mise à jour disponible</div>
             </div>
         </div>
         <div id="content">
@@ -11,9 +11,9 @@
         <div id="right">
             <div id="rightContainer">
                 <div id="user_content">
-                    <span id="user_text">Username</span>
+                    <span id="user_text">Nom d'utilisateur</span>
                     <div id="avatarContainer">
-                        <button id="avatarOverlay">Edit</button>
+                        <button id="avatarOverlay">Modifier</button>
                     </div>
                 </div>
                 <div id="mediaContent">
@@ -25,7 +25,7 @@
                                         d="M70.70475616319865,83.36934004916053 a15.320781354859122,15.320781354859122 0 1 1 14.454501310561755,-15.296030496450625 A14.850515045097694,14.850515045097694 0 0 1 70.70475616319865,83.36934004916053 M123.25082856443602,55.425620905968366 h-12.375429204248078 A45.54157947163293,45.54157947163293 0 0 0 107.21227231573047,46.243052436416285 l8.613298726156664,-9.108315894326587 a9.727087354538993,9.727087354538993 0 0 0 0,-13.167456673319956 l-3.465120177189462,-3.6631270444574313 a8.489544434114185,8.489544434114185 0 0 0 -12.375429204248078,0 l-8.613298726156664,9.108315894326587 A40.442902639482725,40.442902639482725 0 0 0 81.99114759747292,25.427580514871032 V12.532383284044531 a9.108315894326587,9.108315894326587 0 0 0 -8.811305593424633,-9.306322761594556 h-4.950171681699231 a9.108315894326587,9.108315894326587 0 0 0 -8.811305593424633,9.306322761594556 v12.895197230826497 a40.17064319698927,40.17064319698927 0 0 0 -9.331073620003052,4.0591407789933704 l-8.613298726156664,-9.108315894326587 a8.489544434114185,8.489544434114185 0 0 0 -12.375429204248078,0 L25.58394128451018,23.967279868769744 a9.727087354538993,9.727087354538993 0 0 0 0,13.167456673319956 L34.19724001066683,46.243052436416285 a45.07131316187151,45.07131316187151 0 0 0 -3.6631270444574313,9.083565035918088 h-12.375429204248078 a9.083565035918088,9.083565035918088 0 0 0 -8.811305593424633,9.306322761594556 v5.197680265784193 a9.108315894326587,9.108315894326587 0 0 0 8.811305593424633,9.306322761594556 h11.979415469712139 a45.69008462208391,45.69008462208391 0 0 0 4.0591407789933704,10.642869115653347 l-8.613298726156664,9.108315894326587 a9.727087354538993,9.727087354538993 0 0 0 0,13.167456673319956 l3.465120177189462,3.6631270444574313 a8.489544434114185,8.489544434114185 0 0 0 12.375429204248078,0 l8.613298726156664,-9.108315894326587 a40.49240435629971,40.49240435629971 0 0 0 9.331073620003052,4.0591407789933704 v12.895197230826497 a9.083565035918088,9.083565035918088 0 0 0 8.811305593424633,9.306322761594556 h4.950171681699231 A9.083565035918088,9.083565035918088 0 0 0 81.99114759747292,123.68848839660077 V110.79329116577425 a40.78941465720167,40.78941465720167 0 0 0 9.331073620003052,-4.0591407789933704 l8.613298726156664,9.108315894326587 a8.489544434114185,8.489544434114185 0 0 0 12.375429204248078,0 l3.465120177189462,-3.6631270444574313 a9.727087354538993,9.727087354538993 0 0 0 0,-13.167456673319956 l-8.613298726156664,-9.108315894326587 a45.665333763675406,45.665333763675406 0 0 0 4.034389920584874,-10.642869115653347 h12.004166328120636 a9.108315894326587,9.108315894326587 0 0 0 8.811305593424633,-9.306322761594556 v-5.197680265784193 a9.083565035918088,9.083565035918088 0 0 0 -8.811305593424633,-9.306322761594556 "
                                         id="svg_3" class="" />
                                 </svg>
-                                <div id="settingsTooltip">Settings</div>
+                                <div id="settingsTooltip">Réglages</div>
                             </button>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                             </a>
                         </div>
                         <div class="mediaContainer">
-                            <a href="#" class="mediaURL" id="twitterURL" disabled>
+                            <a href="https://twitter.com/ValariumM" class="mediaURL" id="twitterURL" disabled>
                                 <svg id="twitterSVG" class="mediaSVG" viewBox="0 0 5000 4060"
                                     preserveAspectRatio="xMidYMid meet">
                                     <g>
@@ -55,30 +55,8 @@
                             </a>
                         </div>
                         <div class="mediaContainer">
-                            <a href="#" class="mediaURL" id="instagramURL" disabled>
-                                <svg id="instagramSVG" class="mediaSVG" viewBox="0 0 5040 5040">
-                                    <defs>
-                                        <radialGradient id="instaFill" cx="30%" cy="107%" r="150%">
-                                            <stop offset="0%" stop-color="#fdf497" />
-                                            <stop offset="5%" stop-color="#fdf497" />
-                                            <stop offset="45%" stop-color="#fd5949" />
-                                            <stop offset="60%" stop-color="#d6249f" />
-                                            <stop offset="90%" stop-color="#285AEB" />
-                                        </radialGradient>
-                                    </defs>
-                                    <g>
-                                        <path
-                                            d="M1390 5024 c-163 -9 -239 -19 -315 -38 -281 -70 -477 -177 -660 -361 -184 -184 -292 -380 -361 -660 -43 -171 -53 -456 -53 -1445 0 -989 10 -1274 53 -1445 69 -280 177 -476 361 -660 184 -184 380 -292 660 -361 171 -43 456 -53 1445 -53 989 0 1274 10 1445 53 280 69 476 177 660 361 184 184 292 380 361 660 43 171 53 456 53 1445 0 989 -10 1274 -53 1445 -69 280 -177 476 -361 660 -184 184 -380 292 -660 361 -174 44 -454 53 -1470 52 -599 0 -960 -5 -1105 -14z m2230 -473 c58 -6 141 -18 185 -27 397 -78 638 -318 719 -714 37 -183 41 -309 41 -1290 0 -981 -4 -1107 -41 -1290 -81 -395 -319 -633 -714 -714 -183 -37 -309 -41 -1290 -41 -981 0 -1107 4 -1290 41 -397 81 -636 322 -714 719 -33 166 -38 296 -43 1100 -5 796 3 1203 27 1380 67 489 338 758 830 825 47 7 162 15 255 20 250 12 1907 4 2035 -9z" />
-                                        <path
-                                            d="M2355 3819 c-307 -42 -561 -172 -780 -400 -244 -253 -359 -543 -359 -899 0 -361 116 -648 367 -907 262 -269 563 -397 937 -397 374 0 675 128 937 397 251 259 367 546 367 907 0 361 -116 648 -367 907 -197 203 -422 326 -690 378 -101 20 -317 27 -412 14z m400 -509 c275 -88 470 -284 557 -560 20 -65 23 -95 23 -230 0 -135 -3 -165 -23 -230 -88 -278 -284 -474 -562 -562 -65 -20 -95 -23 -230 -23 -135 0 -165 3 -230 23 -278 88 -474 284 -562 562 -20 65 -23 95 -23 230 0 135 3 165 23 230 73 230 219 403 427 507 134 67 212 83 390 79 111 -3 155 -8 210 -26z" />
-                                        <path
-                                            d="M3750 1473 c-29 -11 -66 -38 -106 -77 -70 -71 -94 -126 -94 -221 0 -95 24 -150 94 -221 72 -71 126 -94 225 -94 168 0 311 143 311 311 0 99 -23 154 -94 225 -43 42 -76 66 -110 77 -61 21 -166 21 -226 0z" />
-                                    </g>
-                                </svg>
-                            </a>
-                        </div>
-                        <div class="mediaContainer">
-                            <a href="#" class="mediaURL" id="youtubeURL" disabled>
+                            <a href="https://www.youtube.com/channel/UChpbIl7TZYu0cyReYpMToWA" class="mediaURL"
+                                id="youtubeURL" disabled>
                                 <svg id="youtubeSVG" class="mediaSVG" viewBox="35.34 34.3575 70.68 68.71500">
                                     <g>
                                         <path
@@ -107,12 +85,12 @@
             <div class="bot_wrapper">
                 <div id="content">
                     <div id="server_status_wrapper">
-                        <span class="bot_label" id="landingPlayerLabel">SERVER</span>
+                        <span class="bot_label" id="landingPlayerLabel">SERVEUR</span>
                         <span id="player_count">OFFLINE</span>
                     </div>
                     <div class="bot_divider"></div>
                     <div id="mojangStatusWrapper">
-                        <span class="bot_label">MOJANG STATUS</span>
+                        <span class="bot_label">STATUS MOJANG</span>
                         <span id="mojang_status_icon">&#8226;</span>
                         <div id="mojangStatusTooltip">
                             <div id="mojangStatusTooltipTitle">Services</div>
@@ -121,7 +99,7 @@
                             </div>
                             <div id="mojangStatusNEContainer">
                                 <div class="mojangStatusNEBar"></div>
-                                <div id="mojangStatusNETitle">Non&nbsp;Essential</div>
+                                <div id="mojangStatusNETitle">Non&nbsp;Essentiels</div>
                                 <div class="mojangStatusNEBar"></div>
                             </div>
                             <div id="mojangStatusNonEssentialContainer">
@@ -158,9 +136,9 @@
         <div id="right">
             <div class="bot_wrapper">
                 <div id="launch_content">
-                    <button id="launch_button">PLAY</button>
+                    <button id="launch_button">JOUER</button>
                     <div class="bot_divider"></div>
-                    <button id="server_selection_button" class="bot_label">&#8226; No Server Selected</button>
+                    <button id="server_selection_button" class="bot_label">&#8226; Pas de serveur séléctionné</button>
                 </div>
                 <div id="launch_details">
                     <div id="launch_details_left">
@@ -169,7 +147,7 @@
                     </div>
                     <div id="launch_details_right">
                         <progress id="launch_progress" value="22" max="100"></progress>
-                        <span id="launch_details_text" class="bot_label">Please wait..</span>
+                        <span id="launch_details_text" class="bot_label">Veuillez patienter...</span>
                     </div>
                 </div>
             </div>
@@ -189,7 +167,7 @@
                         <div id="newsArticleAuthorWrapper">
                             <span id="newsArticleAuthor">by Cicero</span>
                         </div>
-                        <a href="#" id="newsArticleComments">0 Comments</a>
+                        <a href="#" id="newsArticleComments">0 Commentaire</a>
                     </div>
                 </div>
                 <div id="newsNavigationContainer">
@@ -236,14 +214,14 @@
         </div>
         <div id="newsErrorContainer">
             <div id="newsErrorLoading">
-                <span id="nELoadSpan" class="newsErrorContent">Checking for News..</span>
+                <span id="nELoadSpan" class="newsErrorContent">En attente des actualités..</span>
             </div>
             <div id="newsErrorFailed" style="display: none;">
-                <span id="nEFailedSpan" class="newsErrorContent">Failed to Load News</span>
-                <button id="newsErrorRetry">Try Again</button>
+                <span id="nEFailedSpan" class="newsErrorContent">Échec du chargement des actualités</span>
+                <button id="newsErrorRetry">Réessayer</button>
             </div>
             <div id="newsErrorNone" style="display: none;">
-                <span id="nENoneSpan" class="newsErrorContent">No News</span>
+                <span id="nENoneSpan" class="newsErrorContent">Pas d'actualités</span>
             </div>
         </div>
     </div>
