--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -13,7 +13,7 @@
             d'infos utiles ainsi qu'un forum sur notre site internet. Le staff de Valarium te souhaite un agréable
             moment en jeu. À tout de suite !</span>
         <br>
-        <span id="welcomeDescCTA">You are just a few clicks away from Westeros.</span>
+        <span id="welcomeDescCTA">Vous n'êtes plus qu'à quelques clicks de Valarium...</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
                 CONTINUE
