--- a/app/login.ejs
+++ b/app/login.ejs
@@ -2,7 +2,7 @@
     <div id="loginCancelContainer" style="display: none;">
         <button id="loginCancelButton">
             <div id="loginCancelIcon">X</div>
-            <span id="loginCancelText">Cancel</span>
+            <span id="loginCancelText">Annuler</span>
         </button>
     </div>
     <div id="loginContent">
@@ -18,7 +18,7 @@
                     </g>
                 </svg>
                 <span class="loginErrorSpan" id="loginEmailError">* Valeur incorrecte</span>
-                <input id="loginUsername" class="loginField" type="text" placeholder="EMAIL OR USERNAME" />
+                <input id="loginUsername" class="loginField" type="text" placeholder="EMAIL" />
             </div>
             <div class="loginFieldContainer">
                 <svg id="lockSVG" class="loginSVG" viewBox="40 32 60.36 70.43">
@@ -28,11 +28,11 @@
                     </g>
                 </svg>
                 <span class="loginErrorSpan" id="loginPasswordError">* Requis</span>
-                <input id="loginPassword" class="loginField" type="password" placeholder="PASSWORD" />
+                <input id="loginPassword" class="loginField" type="password" placeholder="MOT DE PASSE" />
             </div>
             <div id="loginOptions">
                 <span class="loginSpanDim">
-                    <a href="https://my.minecraft.net/en-us/password/forgot/">Mot de passe oublié ?</a>
+                    <a href="https://my.minecraft.net/en-us/password/forgot/">Mot de passe oublié ? &nbsp;&nbsp;</a>
                 </span>
                 <label id="checkmarkContainer">
                     <input id="loginRememberOption" type="checkbox" checked>
@@ -42,7 +42,7 @@
             </div>
             <button id="loginButton" disabled>
                 <div id="loginButtonContent">
-                    LOGIN
+                    SE CONNECTER
                     <svg id="loginSVG" viewBox="0 0 24.87 13.97">
                         <defs>
                             <style>
