Fixed Unable to refresh bug

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -17,7 +17,7 @@
                     <button class="settingsNavItem" rSc="settingsTabUpdate" id="settingsNavUpdate">Mise à jour</button>
                     <div id="settingsNavContentBottom">
                         <div class="settingsNavDivider"></div>
-                        <button id="settingsNavDone">Done</button>
+                        <button id="settingsNavDone">Fini</button>
                     </div>
                 </div>
             </div>
